feat(api): updated api
